--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ bytes = "1.3.0"                                     # helps manage buffers
 log = "0.4.28"
 thiserror = "1.0.32"                                # error handling
 tokio = { version = "1.23.0", features = ["full"] } # async networking
+
+[dev-dependencies]
+rstest = "0.26.1"
