--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ anyhow = "1.0.59"                                   # error handling
 bytes = "1.3.0"                                     # helps manage buffers
 log = "0.4.28"
 thiserror = "1.0.32"                                # error handling
-tokio = { version = "1.23.0", features = ["full"] } # async networking
+tokio = { version = "1.23.0", features = ["full", "test-util"] } # async networking
 
 [dev-dependencies]
 rstest = "0.26.1"
