--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.59"                                   # error handling
+async-trait = "0.1.89"
 bytes = "1.3.0"                                     # helps manage buffers
 log = "0.4.28"
 thiserror = "1.0.32"                                # error handling
